--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,53 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: none;
+}
+
+body,
+html {
+  height: 200%;
+}
+
+body {
+  background: #121212;
+  color: #eee;
+}
+
+#nav-bar {
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  border-top: solid 0.1px rgba(206, 0, 224, 0.979);
+
+  justify-content: space-between;
+  align-items: center;
+  background: rgb(0, 0, 0);
+  padding: 20px 0;
+}
+
+#nav-left-side {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-left: 30px;
+}
+
+#nav-links {
+  display: flex;
+  gap: 50px;
+  margin-right: 30px;
+}
+
+.link {
+  text-decoration: none;
+  color: #809fff;
+}
+
+#name {
+  display: inline;
 }
