--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   color: #eee;
 }
 
-#nav-bar {
+.nav-bar {
   position: fixed;
   top: 0;
 
@@ -33,14 +33,14 @@ body {
   padding: 20px 0;
 }
 
-#nav-left-side {
+.nav-bar-credentials {
   display: flex;
   gap: 20px;
   align-items: center;
   margin-left: 30px;
 }
 
-#nav-links {
+.nav-links {
   display: flex;
   gap: 50px;
   margin-right: 30px;
@@ -51,6 +51,6 @@ body {
   color: #809fff;
 }
 
-#name {
+.nav-full-name {
   display: inline;
 }
