--- a/css/style.css
+++ b/css/style.css
@@ -73,4 +73,10 @@ body {
   height: 200px;
   width: auto;
   border: solid;
+  --s: 10px; /* control the size */
+  padding: 1px;
+  border: 20px solid #ff080800;
+  outline: 1px solid #ffffff;
+  outline-offset: -10px;
+  background: conic-gradient(from 90deg at 1px 1px, #00000000 25%, #ffffff 0);
 }
