--- a/css/style.css
+++ b/css/style.css
@@ -35,20 +35,20 @@ body {
   justify-content: space-between;
   align-items: center;
   background: rgb(0, 0, 0);
-  padding: 20px 0;
+  padding: 1.25rem 0;
 }
 
 .nav-bar-credentials {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
   align-items: center;
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 
 .nav-links {
   display: flex;
-  gap: 50px;
-  margin-right: 30px;
+  gap: 3.125rem;
+  margin-right: 1.875rem;
 }
 
 .link {
@@ -61,7 +61,7 @@ body {
 }
 
 .hero-container {
-  margin: 100px 0 0 0;
+  margin: 6.25rem 0 0 0;
 }
 
 .hero-container,
@@ -78,8 +78,7 @@ body {
   height: 300px;
   width: auto;
   border: solid;
-  --s: 10px; /* control the size */
-  padding: 1px;
+  padding: calc(1rem / 16);
   border: 20px solid #ff080800;
   outline: 1px solid #ffffff;
   outline-offset: -10px;
@@ -95,13 +94,13 @@ body {
 .hire-me-button {
   align-self: center;
   position: relative;
-  margin-bottom: 21px;
-  height: 65px;
-  width: 210px;
-  font-size: 23px;
+  margin-bottom: 1.3125rem;
+  height: 4.0625rem;
+  width: 13.125rem;
+  font-size: 1.4375rem;
   font-weight: 500;
-  letter-spacing: 1px;
-  border-radius: 5px;
+  letter-spacing: 0.0625rem;
+  border-radius: 1rem;
   text-transform: uppercase;
   border: 1px solid transparent;
   outline: none;
@@ -120,24 +119,24 @@ body {
   left: 0;
   top: 0;
   height: 100%;
-  filter: blur(30px);
+  filter: blur(1.875rem);
   opacity: 0.4;
   transition: 0.6s;
 }
 .hire-me-button:before {
-  width: 60px;
+  width: 3.75rem;
   background: rgba(255, 255, 255, 0.6);
-  transform: translateX(-130px) skewX(-45deg);
+  transform: translateX(-8.125rem) skewX(-45deg);
 }
 .hire-me-button:after {
-  width: 30px;
+  width: 1.875rem;
   background: rgba(255, 255, 255, 0.6);
-  transform: translateX(-130px) skewX(-45deg);
+  transform: translateX(-8.125rem) skewX(-45deg);
 }
 .hire-me-button:hover:before,
 .hire-me-button:hover:after {
   opacity: 0.6;
-  transform: translateX(320px) skewX(-45deg);
+  transform: translateX(20rem) skewX(-45deg);
 }
 .hire-me-button:hover {
   color: #f2f2f2;
