Implement script for mouse-tracker to follow mouse

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   text-shadow: -1px -1px 0 var(--rose);
 }
 
-#blob {
+#mouse-tracker {
   background-color: white;
   height: 500px;
   aspect-ratio: 1;
