--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,22 @@ body {
   height: 500px;
   aspect-ratio: 1;
   position: absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  border-radius: 50%;
+  background: linear-gradient(to right, aquamarine, purple);
+  animation: rotate 20s infinite;
+}
+
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+
+  to {
+    rotate: 360deg;
+  }
 }
 
 .nav-bar {
