--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ body {
 
   align-items: center;
   padding: 1.25rem 1.875rem;
+  font-size: 1.15rem;
 }
 
 .nav-bar-credentials {
@@ -183,10 +184,10 @@ body {
   scale: 0.8;
   margin-left: auto;
   position: relative;
-  /* height: 4.0625rem; */
-  /* width: 13.125rem; */
-  height: 3.75rem;
-  width: 12.2rem;
+  /* height: 4.0625rem;
+  width: 13.125rem; */
+  height: 3.85rem;
+  width: 12.9rem;
   font-size: 1.4375rem;
   font-weight: 500;
   letter-spacing: 0.0625rem;
