--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,29 @@ body {
     rotate: 360deg;
   }
 }
+.page-container {
+  height: 100%;
+  width: 100%;
+  scroll-snap-type: x mandatory;
+  display: flex;
+  overflow-x: auto;
+}
 
-.section-1 {
-  z-index: 10;
+.page-container::-webkit-scrollbar {
+  display: none;
+}
+
+.pages {
+  flex: none;
+  scroll-snap-align: start;
+  z-index: 3;
   position: relative;
+  width: 100vw;
+  height: 100vh;
 }
 
 .nav-bar {
+  z-index: 4;
   --_gap: 3rem;
 
   position: fixed;
@@ -209,7 +225,7 @@ body {
   content: "";
   left: 0;
   top: 0;
-  height: 100%;
+  height: 100vh;
   filter: blur(1.875rem);
   opacity: 0.4;
   transition: 0.6s;
