--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
   content: "";
   left: 0;
   top: 0;
-  height: 100vh;
+  height: 100%;
   filter: blur(1.875rem);
   opacity: 0.4;
   transition: 0.6s;
