--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 
 :root {
   --rose: #92133e;
+  --green-background: rgba(31, 99, 31, 0.836);
+  --blue-background: rgba(54, 54, 177, 0.856);
 }
 
 *,
@@ -30,6 +32,7 @@ body {
   background: #121212;
   color: #eee;
   text-shadow: -1px -1px 0 var(--rose);
+  transition: background 500ms;
 }
 
 .blur {
@@ -254,4 +257,145 @@ body {
 .hire-me-button:hover {
   color: #f2f2f2;
   background: var(--rose);
+}
+
+body:has(.card[data-color="green"]:hover) {
+  background: var(--green-background);
+}
+
+body:has(.card[data-color="blue"]:hover) {
+  background: var(--blue-background);
+}
+
+body:has(.card[data-color="red"]:hover) {
+  background: var(--rose);
+}
+
+#publication-cards {
+  height: 100%;
+  display: grid;
+  grid-template: 1fr 1fr 1fr/ 1fr 1fr 1fr 1fr;
+  place-items: center;
+  gap: 4rem;
+  padding: 4rem;
+}
+
+.card {
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  transition: scale 100ms;
+}
+
+.card-front-image {
+  position: relative;
+  z-index: 2;
+}
+
+.card-image {
+  width: 300px;
+  height: 300px;
+  border-radius: clamp(0.5rem, 0.75vw, 2rem);
+}
+
+.card-faders {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 1500ms;
+  pointer-events: none;
+}
+
+.card:hover .card-faders {
+  opacity: 1;
+}
+
+.card:active {
+  scale: 0.98;
+}
+
+.card-fader {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
+.card-fader:nth-child(odd) {
+  animation: fade-left 3s linear infinite;
+}
+
+.card-fader:nth-child(even) {
+  animation: fade-right 3s linear infinite;
+}
+
+.card-fader:is(:nth-child(3), :nth-child(4)) {
+  animation-delay: 750ms;
+}
+
+.card-fader:is(:nth-child(5), :nth-child(6)) {
+  animation-delay: 1500ms;
+}
+
+.card-fader:is(:nth-child(7), :nth-child(8)) {
+  animation-delay: 2250ms;
+}
+
+@media (max-width: 1200px) {
+  body {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .card .card-image {
+    width: 400px;
+  }
+}
+
+@media (max-width: 600px) {
+  #publication-cards {
+    gap: 2rem;
+    padding: 2rem;
+  }
+
+  .card {
+    width: 80%;
+  }
+
+  .card .card-image {
+    width: 100%;
+  }
+}
+
+@keyframes fade-left {
+  from {
+    scale: 1;
+    translate: 0%;
+    opacity: 1;
+  }
+
+  to {
+    scale: 0.8;
+    translate: -30%;
+    opacity: 0;
+  }
+}
+
+@keyframes fade-right {
+  from {
+    scale: 1;
+    translate: 0%;
+    opacity: 1;
+  }
+
+  to {
+    scale: 0.8;
+    translate: 30%;
+    opacity: 0;
+  }
 }
